# LLM-Judge-TestBench

./: .gitignore  AGENTS.md  Makefile  README.md  dataset_contract.md  pyproject.toml  requirements-dev.txt  requirements.txt  reviewer_analytics.md
.cursor/rules/: architecture.mdc  completeness.mdc  config-files.mdc  dataset-schema.mdc  evaluation-metrics.mdc  judge-modules.mdc  llm-provider.mdc  observability.mdc  project-overview.mdc  python-conventions.mdc  streamlit-ui.mdc
configs/: evaluation_thresholds.yaml
configs/completeness_kb/: seed.yaml
configs/judges/: bias_discrimination.yaml  completeness.yaml  factual_accuracy.yaml  hallucination.yaml  relevance.yaml  toxicity.yaml
configs/mappings/: ground_truth_eval_sample.yaml  retail_support.yaml
configs/rubrics/: bias_discrimination.yaml  completeness.yaml  factual_accuracy.yaml  hallucination.yaml  relevance.yaml  toxicity.yaml
data/samples/: README.md  full_schema_sample.csv  full_schema_sample.json  ground_truth_eval_sample.csv  malformed_missing_category.csv  minimal_required.csv  retail_support.csv  retail_support.json  retail_support.parquet  retail_support.xlsx
docs/: ARCHITECTURE.md  COMPLETENESS_KB.md  JUDGE_OUTPUT_CONTRACT.md  JUDGE_PILLARS.md  METRICS.md  OBSERVABILITY.md  PROJECT_CONTEXT.md  ROADMAP.md
scripts/: generate_sample_data.py
src/: __init__.py
src/app/: __init__.py  state.py  streamlit_app.py
src/completeness/: __init__.py  kb_loader.py  kb_matcher.py  models.py  task_profile.py
src/core/: __init__.py  constants.py  exceptions.py  settings.py  types.py
src/dashboard/: __init__.py  charts.py  filters.py  plotly_charts.py  tables.py
src/evaluation/: __init__.py  agreement.py  diagnostics.py  join.py  metrics.py  reviewer_analysis.py  slices.py  thresholds.py
src/exports/: __init__.py
src/ingestion/: __init__.py  loaders.py  normalizer.py  schema_mapper.py  validators.py
src/judges/: __init__.py  base.py  bias_discrimination.py  completeness.py  config.py  factual_accuracy.py  hallucination.py  output_parser.py  prompt_builder.py  registry.py  relevance.py  toxicity.py
src/llm/: __init__.py  base.py  factory.py  google_client.py  mock_client.py
src/observability/: __init__.py  adapters.py  langfuse_tracer.py  mlflow_logger.py  mlflow_risk_logging.py  run_metadata.py
src/orchestration/: __init__.py  batching.py  caching.py  concurrency.py  runner.py
src/rubrics/: __init__.py  loader.py  models.py
tests/: conftest.py
tests/integration/: test_full_schema_sample.py  test_ingestion_roundtrip.py  test_llm_structured_contract.py  test_stage10_observability_e2e.py  test_stage5_end_to_end.py  test_stage6_completeness_kb_e2e.py  test_stage7_runner_e2e.py  test_stage8_metrics_e2e.py  test_stage9_dashboard_e2e.py
tests/unit/: test_completeness_loader.py  test_completeness_matcher.py  test_completeness_models.py  test_completeness_task_profile.py  test_dashboard_charts.py  test_dashboard_filters.py  test_dashboard_tables.py  test_evaluation_diagnostics.py  test_evaluation_join_agreement.py  test_evaluation_metrics.py  test_evaluation_reviewer.py  test_evaluation_slices.py  test_evaluation_thresholds.py  test_google_client.py  test_imports.py  test_judges_base.py  test_judges_completeness_kb.py  test_judges_config.py  test_judges_output_parser.py  test_judges_pillars.py  test_judges_prompt_builder.py  test_judges_registry.py  test_llm_base.py  test_llm_factory.py  test_loaders.py  test_mock_client.py  (+15 more)
(+8 files in other folders)
