[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "llm-judge-testbench"
version = "0.1.0"
description = "Streamlit-first evaluation workbench for LLM judges against SME rubrics."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Judge Testbench Team" }]
keywords = ["llm", "evaluation", "judge", "streamlit", "sme"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "streamlit>=1.38,<2",
    "python-dotenv>=1.0,<2",
    "pandas>=2.2,<3",
    "openpyxl>=3.1,<4",
    "pyarrow>=16,<22",
    "pyyaml>=6.0,<7",
    "langchain-core>=0.3,<1",
    "langchain-google-genai>=2.0,<3",
    "tenacity>=8,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "ruff>=0.6,<1",
    "black>=24,<25",
    "mypy>=1.11,<2",
    "pandas-stubs>=2.2,<3",
    "types-PyYAML>=6.0,<7",
]

[project.scripts]
# Stage 1 placeholder CLI entry; wiring arrives with later stages.

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/configs",
    "/docs",
    "/README.md",
    "/AGENTS.md",
    "/dataset_contract.md",
    "/reviewer_analytics.md",
    "/pyproject.toml",
]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length enforced by black
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["streamlit", "streamlit.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "langchain_google_genai",
    "langchain_google_genai.*",
    "google.api_core",
    "google.api_core.*",
    "tenacity",
    "tenacity.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: integration tests (may touch multiple modules or fixtures).",
    "slow: tests that are slow and should be skipped by default in fast CI.",
]
filterwarnings = [
    "error",
    # pydantic v2 emits some DeprecationWarnings from third-party plugins; keep strict here.
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
